--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -36,6 +36,8 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
+    - name: AVS のデプロイまたはプロビジョニングのエラーに関するヘルプを表示する
+      href: fix-deployment-provisioning-failures.md
     - name: AVS 向けの Azure Backup Server
       items:
         - name: AVS 向けに Azure Backup Server を設定する
