--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -10,8 +10,8 @@
       href: overview-iot-central-developer.md
     - name: 最新の更新
       items:
-        - name: 2020 年 5 月の更新
-          href: 'https://azure.microsoft.com/updates/azure-iot-central-may-2020-updates/'
+        - name: 2020 年 5 月のジョブとメトリックの更新
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-jobs-and-metrics-feature-updates-may-2020/'
         - name: 2020 年 5 月のダッシュボード更新
           href: 'https://azure.microsoft.com/updates/azure-iot-central-may-2020-dashboard-updates/'
         - name: 2020 年 4 月の新機能
