--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -7,12 +7,12 @@ metadata:
   ms.topic: landing-page
   ms.service: app-service
   ms.date: 02/26/2020
-  ms.openlocfilehash: eea156253163f1ffe9751cfc0e7824628cb1c773
-  ms.sourcegitcommit: 595cde417684e3672e36f09fd4691fb6aa739733
+  ms.openlocfilehash: e8dcbe7288fb72fb5084f210bf38f7fa55f969a2
+  ms.sourcegitcommit: 55b2bbbd47809b98c50709256885998af8b7d0c5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/20/2020
-  ms.locfileid: "83697826"
+  ms.lasthandoff: 06/18/2020
+  ms.locfileid: "84987964"
 landingContent:
 - title: App Service について
   linkLists:
@@ -44,6 +44,10 @@ landingContent:
       url: app-service-web-get-started-php.md
     - text: 初めての Java アプリ
       url: app-service-web-get-started-java.md
+    - text: 初めての Python アプリ (Linux 版)
+      url: containers/quickstart-python.md
+    - text: 初めての Ruby アプリ (Linux 版)
+      url: containers/quickstart-ruby.md
 - title: 一般的なタスク
   linkLists:
   - linkListType: tutorial
