--- a/articles/azure-arc/kubernetes/toc.yml
+++ b/articles/azure-arc/kubernetes/toc.yml
@@ -20,8 +20,8 @@
           href: use-gitops-with-helm.md
         - name: Azure Policy を使用して GitOps を適用する
           href: use-azure-policy.md
-        - name: コンテナーに対する Azure Monitor
-          href: deploy-azure-monitor-for-containers.md
+        - name: コンテナーに対する Azure Monitor を利用した監視
+          href: ../../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
         - name: Azure Policy を使用した受付制御ポリシー
           href: ../../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/kubernetes/toc.json
         - name: IoT ワークロードをデプロイする
