--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -91,6 +91,17 @@
           href: how-to-manage-account-keys.md
         - name: 認証を管理する
           href: how-to-manage-authentication.md
+          items:
+            - name: デーモン アプリケーションをセキュリティで保護する方法
+              href: how-to-secure-daemon-app.md
+            - name: 対話型サインインのシングル ページ アプリケーションをセキュリティで保護する方法
+              href: how-to-secure-spa-users.md
+            - name: Web アプリをセキュリティで保護する方法
+              href: how-to-secure-webapp-users.md
+            - name: 非対話型サインインのシングル ページ アプリケーションをセキュリティで保護する方法
+              href: how-to-secure-spa-app.md
+            - name: 入力の制約付きアプリケーションをセキュリティで保護する方法
+              href: how-to-secure-device-code.md
         - name: 価格レベルを管理する
           href: how-to-manage-pricing-tier.md
         - name: Creator の管理
@@ -227,8 +238,10 @@
   items:
     - name: API とパラメーターの拡張子
       items:
-        - name: 描画パッケージの要件
+        - name: Drawing パッケージの要件
           href: drawing-requirements.md
+        - name: 動的マップの StylesObject
+          href: schema-stateset-stylesobject.md
         - name: 車両消費モデル
           href: consumption-model.md
         - name: GeoJSON 形式の拡張
@@ -318,9 +331,9 @@
     - name: Azure IoT SDK
       items:
         - name: IoT サービスの SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
         - name: IoT デバイス SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
     - name: Azure Maps の使用条件
       href: 'https://azure.microsoft.com/support/legal/'
     - name: Azure Maps の価格
