--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -71,6 +71,8 @@
           href: how-to-custom-speech-train-model.md
         - name: カスタム モデルをデプロイする
           href: how-to-custom-speech-deploy-model.md
+        - name: Custom Speech の CI/CD
+          href: how-to-custom-speech-continuous-integration-continuous-deployment.md
         - name: ヒューマン ラベル付け文字起こしを作成する
           href: how-to-custom-speech-human-labeled-transcriptions.md
     - name: リファレンス
@@ -80,7 +82,7 @@
             - name: C++
               displayName: 'C++ SDK,C++ dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/cppref'
-            - name: 'C#'
+            - name: C#
               displayName: 'CSharp SDK,.NET SDK,C# SDK,C# dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/csharpref'
             - name: Java
@@ -105,9 +107,9 @@
     - name: リソース
       items:
         - name: 言語のサポート
-          href: 'language-support.md#speech-to-text'
+          href: language-support.md#speech-to-text
         - name: リージョンのサポート
-          href: 'regions.md#speech-to-text-text-to-speech-and-translation'
+          href: regions.md#speech-to-text-text-to-speech-and-translation
         - name: 音声テキスト変換のよくあるご質問
           displayName: 'FAQ,STT FAQ,SR FAQ,frequently asked questions'
           href: faq-stt.md
@@ -177,7 +179,7 @@
             - name: C++
               displayName: 'C++ SDK,C++ dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/cppref'
-            - name: 'C#'
+            - name: C#
               displayName: 'CSharp SDK,.NET SDK,C# SDK,C# dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/csharpref'
             - name: Java
@@ -202,11 +204,11 @@
     - name: リソース
       items:
         - name: 標準の音声サポート
-          href: 'language-support.md#standard-voices'
+          href: language-support.md#standard-voices
         - name: ニューラルの音声サポート
-          href: 'language-support.md#neural-voices'
+          href: language-support.md#neural-voices
         - name: リージョンのサポート
-          href: 'regions.md#speech-to-text-text-to-speech-and-translation'
+          href: regions.md#speech-to-text-text-to-speech-and-translation
         - name: SSML 音素セット
           href: speech-ssml-phonetic-sets.md
         - name: 音声テキスト変換のよくあるご質問
@@ -241,7 +243,7 @@
             - name: C++
               displayName: 'C++ SDK,C++ dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/cppref'
-            - name: 'C#'
+            - name: C#
               displayName: 'CSharp SDK,.NET SDK,C# SDK,C# dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/csharpref'
             - name: Java
@@ -262,9 +264,9 @@
     - name: リソース
       items:
         - name: 言語のサポート
-          href: 'language-support.md#speech-translation'
+          href: language-support.md#speech-translation
         - name: リージョンのサポート
-          href: 'regions.md#speech-to-text-text-to-speech-and-translation'
+          href: regions.md#speech-to-text-text-to-speech-and-translation
         - name: 音声翻訳のよくあるご質問
           href: 'https://www.microsoft.com/translator/faq.aspx'
 - name: 意図認識
@@ -278,7 +280,7 @@
           href: quickstarts/intent-recognition.md
     - name: 操作方法ガイド
       items:
-        - name: 'LUIS、C# を使って音声から意図を認識する'
+        - name: LUIS、C# を使って音声から意図を認識する
           href: how-to-recognize-intents-from-speech-csharp.md
     - name: リファレンス
       items:
@@ -287,7 +289,7 @@
             - name: C++
               displayName: 'C++ SDK,C++ dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/cppref'
-            - name: 'C#'
+            - name: C#
               displayName: 'CSharp SDK,.NET SDK,C# SDK,C# dev kit,reference,reference docs,ref documentation'
               href: 'https://aka.ms/csspeech/csharpref'
             - name: Java
@@ -314,7 +316,7 @@
         - name: 言語のサポート
           href: ../luis/luis-language-support.md
         - name: リージョンのサポート
-          href: 'regions.md#intent-recognition'
+          href: regions.md#intent-recognition
 - name: 会話のシナリオ
   items:
     - name: 会話のシナリオのドキュメント
@@ -342,7 +344,7 @@
                 - name: C++
                   displayName: 'C++ SDK,C++ dev kit,reference,reference docs,ref documentation'
                   href: 'https://aka.ms/csspeech/cppref'
-                - name: 'C#'
+                - name: C#
                   displayName: 'CSharp SDK,.NET SDK,C# SDK,C# dev kit,reference,reference docs,ref documentation'
                   href: 'https://aka.ms/csspeech/csharpref'
                 - name: Java
@@ -380,7 +382,7 @@
               items:
                 - name: C++
                   href: 'https://docs.microsoft.com/cpp/cognitive-services/speech/microsoft-cognitiveservices-speech-transcription-namespace'
-                - name: 'C#'
+                - name: C#
                   href: 'https://docs.microsoft.com/dotnet/api/microsoft.cognitiveservices.speech.transcription'
                 - name: Java
                   href: 'https://docs.microsoft.com/java/api/com.microsoft.cognitiveservices.speech.transcription'
@@ -531,7 +533,7 @@
       items:
         - name: C++
           href: 'https://aka.ms/csspeech/cppref'
-        - name: 'C#'
+        - name: C#
           href: 'https://aka.ms/csspeech/csharpref'
         - name: Java
           href: 'https://aka.ms/csspeech/javaref'
