--- a/articles/cost-management-billing/manage/toc.yml
+++ b/articles/cost-management-billing/manage/toc.yml
@@ -75,7 +75,7 @@
           href: pay-by-invoice.md
         - name: 追加のサブスクリプションを作成する
           href: create-subscription.md
-        - name: CSP サブスクリプションの移動
+        - name: CSP とサブスクライバーの間でサブスクリプションを転送する
           href: transfer-subscriptions-subscribers-csp.md
         - name: サブスクリプション情報のエクスポート
           href: export-subscriptions.md
