--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -19,6 +19,10 @@
       items:
         - name: Azure Key Vault と Kubernetes の統合
           href: key-vault-integrate-kubernetes.md
+    - name: Azure Databricks
+      items:
+        - name: Azure Databricks と Azure Key Vault を使用して Azure Blob Storage にアクセスする
+          href: integrate-databricks-blob-storage.md
     - name: マネージ ID と .NET を使用した Web アプリへの Key Vault の接続
       href: tutorial-net-create-vault-azure-web-app.md
 - name: サンプル
@@ -129,13 +133,13 @@
     - name: Azure CLI
       href: /cli/azure/keyvault
     - name: .NET
-      href: /dotnet/api/overview/azure/key-vault?view=azure-dotnet
+      href: /dotnet/api/overview/azure/keyvault/management?view=azure-dotnet
     - name: Java
       href: /java/api/overview/azure/keyvault?view=azure-java-stable
     - name: Node.js
       href: /javascript/api/overview/azure/key-vault?view=azure-node-latest
     - name: Python
-      href: /python/api/overview/azure/key-vault?view=azure-python
+      href: /python/api/overview/azure/keyvault/management?view=azure-python
     - name: REST
       href: /rest/api/keyvault
     - name: Resource Manager テンプレート
