--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -60,6 +60,12 @@
           href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
         - name: iOS デバイスにローカライズしたプッシュ通知を送信する
           href: notification-hubs-ios-xplat-localized-apns-push-notification.md
+    - name: クロスプラットフォーム
+      items:
+        - name: バックエンド サービスを介してプッシュ通知を送信する
+          items:
+            - name: Xamarin.Forms
+              href: notification-hubs-backend-service-xamarin-forms.md
     - name: Windows Phone
       items:
         - name: アプリに通知をプッシュする
