--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -25,10 +25,6 @@
   items:
     - name: 認証を使用してサーバーレスのリアルタイム アプリを構築する
       href: signalr-tutorial-authenticate-azure-functions.md
-    - name: モニター
-      items:
-        - name: 診断ログを使用して SignalR サービスを監視する
-          href: signalr-tutorial-diagnostic-logs.md
 - name: サンプル
   items:
     - name: コード サンプル
@@ -91,6 +87,12 @@
           href: signalr-concept-azure-functions.md
         - name: Event Grid の統合
           href: signalr-howto-event-grid-integration.md
+    - name: モニター
+      items:
+        - name: 診断ログを使用して SignalR サービスを監視する
+          href: signalr-howto-diagnostic-logs.md
+        - name: Azure Policy を使用したコンプライアンスの監査
+          href: signalr-howto-azure-policy.md
 - name: References
   items:
     - name: Azure CLI
