commit translated contents

--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -194,30 +194,6 @@
               href: wrangling-data-flow-overview.md
             - name: サポートされる関数
               href: wrangling-data-flow-functions.md
-    - name: データ レイクおよび EDW のデータ移行
-      items:
-        - name: Azure Data Factory を選ぶ理由
-          href: data-migration-guidance-overview.md
-        - name: データを AWS S3 から Azure に移行する
-          href: data-migration-guidance-s3-azure-storage.md
-        - name: オンプレミスの Hadoop クラスターから Azure へのデータの移行
-          href: data-migration-guidance-hdfs-azure-storage.md
-        - name: オンプレミスの Netezza サーバーから Azure へのデータの移行
-          href: data-migration-guidance-netezza-azure-sqldw.md
-    - name: マッピング データ フローを使用した変換
-      items:
-        - name: 固定幅のテキスト ファイルを処理する
-          href: how-to-fixed-width.md
-        - name: エラー行の処理
-          href: how-to-data-flow-error-rows.md
-        - name: Azure SQL DB から CosmosDB へ
-          href: how-to-sqldb-to-cosmosdb.md
-    - name: オンプレミスからの SSIS の移行
-      items:
-        - name: SSIS の移行の概要
-          href: scenario-ssis-migration-overview.md
-        - name: Azure SQL Managed Instance への SSISDB の移行
-          href: scenario-ssis-migration-ssisdb-mi.md
     - name: ロールとアクセス許可
       href: concepts-roles-permissions.md
     - name: 名前付け規則
@@ -612,7 +588,7 @@
         - name: 統合ランタイムの監視
           href: monitor-integration-runtime.md
         - name: Azure-SSIS 統合ランタイムの監視
-          href: 'monitor-integration-runtime.md#azure-ssis-integration-runtime'
+          href: monitor-integration-runtime.md#azure-ssis-integration-runtime
         - name: Azure-SSIS 統合ランタイムの再構成
           href: manage-azure-ssis-integration-runtime.md
         - name: データ ファクトリのコピーまたは複製
@@ -683,6 +659,32 @@
           href: how-to-create-tumbling-window-trigger.md
         - name: タンブリング ウィンドウ トリガーの依存関係の作成
           href: tumbling-window-trigger-dependency.md
+    - name: シナリオ
+      items:
+        - name: データ レイクおよび EDW のデータ移行
+          items:
+            - name: Azure Data Factory を選ぶ理由
+              href: data-migration-guidance-overview.md
+            - name: データを AWS S3 から Azure に移行する
+              href: data-migration-guidance-s3-azure-storage.md
+            - name: オンプレミスの Hadoop クラスターから Azure へのデータの移行
+              href: data-migration-guidance-hdfs-azure-storage.md
+            - name: オンプレミスの Netezza サーバーから Azure へのデータの移行
+              href: data-migration-guidance-netezza-azure-sqldw.md
+        - name: マッピング データ フローを使用した変換
+          items:
+            - name: 固定幅のテキスト ファイルを処理する
+              href: how-to-fixed-width.md
+            - name: エラー行の処理
+              href: how-to-data-flow-error-rows.md
+            - name: Azure SQL DB から CosmosDB へ
+              href: how-to-sqldb-to-cosmosdb.md
+        - name: オンプレミスからの SSIS の移行
+          items:
+            - name: SSIS の移行の概要
+              href: scenario-ssis-migration-overview.md
+            - name: Azure SQL Managed Instance への SSISDB の移行
+              href: scenario-ssis-migration-ssisdb-mi.md
     - name: テンプレート
       items:
         - name: テンプレートの概要
