--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -34,6 +34,7 @@
         - name: PowerShell
           href: create-data-warehouse-powershell.md
         - name: ARM テンプレート
+          displayName: Resource Manager
           href: quickstart-arm-template.md
     - name: データの読み込み
       items:
