--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -43,6 +43,10 @@
       href: network-watcher-security-group-view-overview.md
     - name: ロールベースのアクセス制御のアクセス許可
       href: required-rbac-permissions.md
+    - name: Security
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: Network Watcher を構成する
@@ -103,7 +107,7 @@
               href: network-watcher-nsg-flow-logging-cli.md
             - name: REST
               href: network-watcher-nsg-flow-logging-rest.md
-            - name: Azure Resoure Manager
+            - name: Azure Resource Manager
               href: network-watcher-nsg-flow-logging-azure-resource-manager.md
         - name: NSG フロー ログ ストレージ BLOB の削除
           href: network-watcher-delete-nsg-flow-log-blobs.md
@@ -163,7 +167,7 @@
     - name: Azure CLI
       href: /cli/azure/network/watcher
     - name: Azure PowerShell
-      href: '/powershell/module/az.network/#network_watcher'
+      href: /powershell/module/az.network/#network_watcher
     - name: Java
       href: /java/api/com.microsoft.azure.management.network
     - name: Ruby
