--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -106,6 +106,8 @@
               href: ./spark/apache-spark-history-server.md
     - name: Security
       items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
         - name: ネットワークのセキュリティ
           items:
             - name: Synapse ワークスペースの IP ファイアウォール規則
