--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 04/14/2020
-  ms.openlocfilehash: e62db32a20c4124f64e7c77d626099905a960815
-  ms.sourcegitcommit: 64fc70f6c145e14d605db0c2a0f407b72401f5eb
+  ms.openlocfilehash: 3d06144a9b0a39e7fe0dfbaf7fbdd789ef439336
+  ms.sourcegitcommit: 4042aa8c67afd72823fc412f19c356f2ba0ab554
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "83871802"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85297836"
 landingContent:
 - title: Azure Lighthouse について
   linkLists:
@@ -71,15 +71,17 @@ landingContent:
       url: ./how-to/view-manage-customers.md
     - text: サービス プロバイダーを表示し、管理する
       url: ./how-to/view-manage-service-providers.md
-- title: Azure サービスの操作
+- title: 大規模な Azure サービスの操作
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Azure Monitor ログの大規模な使用
+    - text: Azure Sentinel ワークスペースの管理
+      url: ./how-to/manage-sentinel-workspaces.md
+    - text: Azure Monitor ログを使用する
       url: ./how-to/monitor-at-scale.md
     - text: 委任変更の監視
       url: ./how-to/monitor-at-scale.md
-    - text: Azure Policy を大規模にデプロイする
+    - text: Azure Policy をデプロイする
       url: ./how-to/policy-at-scale.md
     - text: 修復できるポリシーをデプロイする
       url: ./how-to/deploy-policy-remediation.md
