--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -420,5 +420,7 @@
           href: sql-data-warehouse-partner-data-integration.md
         - name: データ管理
           href: sql-data-warehouse-partner-data-management.md
+        - name: 機械学習と AI
+          href: sql-data-warehouse-partner-machine-learning-ai.md
         - name: パブリック プレビュー パートナー
           href: sql-data-warehouse-partner-launch.md
