--- a/articles/web-application-firewall/toc.yml
+++ b/articles/web-application-firewall/toc.yml
@@ -77,6 +77,8 @@
           href: ./afds/waf-front-door-geo-filtering.md
         - name: よく寄せられる質問
           href: ./afds/waf-faq.md
+    - name: WAF と Azure Policy
+      href: ./shared/waf-azure-policy.md
 - name: 操作方法ガイド
   items:
     - name: Application Gateway
