commit translated contents

--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -14,6 +14,10 @@
       items:
         - name: AI + 機械学習
           items:
+            - name: Cognitive Search
+              href: ../../search/search-get-started-arm.md?toc=/azure/azure-resource-manager/templates/toc.json
+            - name: Cognitive Services
+              href: ../../cognitive-services/resource-manager-template.md?toc=/azure/azure-resource-manager/templates/toc.json
             - name: データ サイエンス仮想マシン
               href: ../../machine-learning/data-science-virtual-machine/dsvm-tutorial-resource-manager.md?toc=/azure/azure-resource-manager/templates/toc.json
             - name: Machine Learning
@@ -40,6 +44,8 @@
               href: ../../hdinsight/spark/apache-spark-jupyter-spark-sql.md?toc=/azure/azure-resource-manager/templates/toc.json
             - name: Stream Analytics
               href: ../../stream-analytics/quick-create-azure-resource-manager.md?toc=/azure/azure-resource-manager/templates/toc.json
+            - name: Synapse Analytics
+              href: ../../synapse-analytics/sql-data-warehouse/quickstart-arm-template.md?toc=/azure/azure-resource-manager/templates/toc.json
         - name: ブロックチェーン
           items:
             - name: ブロックチェーン
@@ -130,8 +136,6 @@
               href: ../../key-vault/secrets/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
         - name: Web
           items:
-            - name: Cognitive Search
-              href: ../../search/search-get-started-arm.md?toc=/azure/azure-resource-manager/templates/toc.json
             - name: Notification Hubs
               href: ../../notification-hubs/create-notification-hub-template.md?toc=/azure/azure-resource-manager/templates/toc.json
 - name: チュートリアル
@@ -293,6 +297,14 @@
           href: export-template-portal.md
         - name: リソースを探索する
           href: view-resources.md
+    - name: テンプレートの検証
+      items:
+        - name: what-if のデプロイ
+          href: template-deploy-what-if.md
+        - name: ツールキットのテスト
+          href: test-toolkit.md
+        - name: テスト ケース
+          href: test-cases.md
     - name: テンプレートのデプロイ
       items:
         - name: デプロイ - ポータル
@@ -309,8 +321,6 @@
           href: deploy-rest.md
         - name: GitHub からのデプロイ
           href: deploy-to-azure-button.md
-        - name: what-if のデプロイ
-          href: template-deploy-what-if.md
         - name: エラー発生時の再デプロイ
           displayName: rollback
           href: rollback-on-error.md
