--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -150,7 +150,7 @@
       href: concept-ml-pipelines.md
     - name: エンタープライズ対応とセキュリティ
       items:
-        - name: エンタープライズ セキュリティ
+        - name: エンタープライズ セキュリティとガバナンス
           items:
             - name: エンタープライズ セキュリティの概要
               displayName: authorization authentication encryption aad azure active directory
@@ -164,8 +164,8 @@
               displayName: private endpoint
               href: how-to-configure-private-link.md
             - name: TLS を使用して Web サービスをセキュリティで保護する
-              href: how-to-secure-web-service.md
               displayName: ssl
+              href: how-to-secure-web-service.md
             - name: AKS デプロイで Azure AD ID を使用する
               href: how-to-use-azure-ad-identity.md
             - name: ストレージ アクセス キーの再生成
@@ -274,19 +274,16 @@
               href: how-to-differential-privacy.md
     - name: モデルをトレーニングする
       items:
+        - name: トレーニング環境をセットアップする
+          displayName: 'run config, compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
+          href: how-to-set-up-training-targets.md
         - name: ML に Estimator を使用する
           items:
             - name: トレーニングでの推定器の作成
               href: how-to-train-ml-models.md
-            - name: トレーニング環境をセットアップする
-              displayName: 'run config, compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
-              href: how-to-set-up-training-targets.md
             - name: ハイパーパラメーターを調整する
               displayName: parameter
               href: how-to-tune-hyperparameters.md
-            - name: トレーニング時に Key Vault を使用する
-              displayName: secrets keyvault
-              href: how-to-use-secrets-in-runs.md
         - name: Scikit-learn
           href: how-to-train-scikit-learn.md
         - name: TensorFlow
@@ -295,17 +292,33 @@
           href: how-to-train-keras.md
         - name: PyTorch
           href: how-to-train-pytorch.md
+        - name: トレーニングの追跡と監視
+          items:
+            - name: 実行の開始、監視、または取り消し
+              displayName: 'cancel, fail, status, child run'
+              href: how-to-manage-runs.md
+            - name: トレーニング実行のメトリックを記録する
+              href: how-to-track-experiments.md
+            - name: MLflow を使用して実験を追跡する
+              displayName: 'log, monitor, metrics, Databricks'
+              href: how-to-use-mlflow.md
+            - name: TensorBoard を使用して実行を視覚化する
+              displayName: 'log, monitor, metrics'
+              href: how-to-monitor-tensorboard.md
+        - name: モデルの解釈と説明
+          displayName: interpretability
+          items:
+            - name: ML モデルを解釈する
+              displayName: 'SDK, interpret, explain, explanability, interpretability'
+              href: how-to-machine-learning-interpretability-aml.md
+            - name: 自動化された ML モデルの説明
+              displayName: 'SDK, interpret, interpret, explain, explanability, interpretability, automated ML, automl, auto ml'
+              href: how-to-machine-learning-interpretability-automl.md
+        - name: トレーニング時に Key Vault を使用する
+          displayName: secrets keyvault
+          href: how-to-use-secrets-in-runs.md
         - name: 強化学習
           href: how-to-use-reinforcement-learning.md
-    - name: モデルの解釈と説明
-      displayName: interpretability
-      items:
-        - name: ML モデルを解釈する
-          displayName: 'SDK, interpret, explain, explanability, interpretability'
-          href: how-to-machine-learning-interpretability-aml.md
-        - name: 自動化された ML モデルの説明
-          displayName: 'SDK, interpret, interpret, explain, explanability, interpretability, automated ML, automl, auto ml'
-          href: how-to-machine-learning-interpretability-automl.md
     - name: 機械学習の自動化
       displayName: 'automl, auto ml'
       items:
@@ -334,19 +347,6 @@
           href: how-to-use-automlstep-in-pipelines.md
         - name: グラフとメトリックを理解する
           href: how-to-understand-automated-ml.md
-    - name: 実験を追跡および監視する
-      items:
-        - name: 実行の開始、監視、または取り消し
-          displayName: 'cancel, fail, status, child run'
-          href: how-to-manage-runs.md
-        - name: トレーニング実行のメトリックを記録する
-          href: how-to-track-experiments.md
-        - name: MLflow を使用して実験を追跡する
-          displayName: 'log, monitor, metrics, Databricks'
-          href: how-to-use-mlflow.md
-        - name: TensorBoard を使用して実行を視覚化する
-          displayName: 'log, monitor, metrics'
-          href: how-to-monitor-tensorboard.md
     - name: モデルをデプロイおよび提供する
       items:
         - name: デプロイする場所と方法
@@ -413,7 +413,6 @@
           displayName: designer
           href: how-to-debug-pipelines.md
         - name: Application Insights でパイプラインをデバッグする
-          displayname: 'pipelines, log, monitor'
           href: how-to-debug-pipelines-application-insights.md
         - name: デザイナーによるデータの変換
           displayName: pipeline
@@ -483,7 +482,7 @@
       displayName: 'bugs, errors, troubleshoot'
       href: resource-known-issues.md
     - name: ユーザー フォーラム
-      href: 'https://aka.ms/aml-forum-service'
+      href: 'https://docs.microsoft.com/answers/topics/azure-machine-learning.html'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning-service'
     - name: Microsoft の ML 製品の比較
