--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -394,30 +394,64 @@
       items:
         - name: 音声アシスタントとは
           href: voice-assistants.md
-    - name: カスタム コマンド (プレビュー)
+    - name: カスタム コマンド
       items:
         - name: カスタム コマンドとは
           href: custom-commands.md
         - name: クイックスタート
           items:
-            - name: カスタム コマンド アプリを作成する
-              href: quickstart-custom-speech-commands-create-new.md
-            - name: パラメーターを使用してカスタム コマンドを作成する
-              href: quickstart-custom-speech-commands-create-parameters.md
-            - name: カスタム音声でカスタム コマンドを使用する
-              href: quickstart-custom-speech-commands-select-custom-voice.md
-            - name: Speech SDK でカスタム コマンドを使用する
-              href: quickstart-custom-speech-commands-speech-sdk.md
+            - name: カスタム コマンド アプリを構築する
+              href: quickstart-custom-commands-application.md
         - name: 操作方法ガイド
           items:
-            - name: クライアントからコマンドを実行する
-              href: how-to-custom-speech-commands-fulfill-sdk.md
-            - name: パラメーターの検証を追加する
-              href: how-to-custom-speech-commands-validations.md
-            - name: 確認を追加する
-              href: how-to-custom-speech-commands-confirmations.md
-            - name: ワンステップ修正を追加する
-              href: how-to-custom-speech-commands-one-step-correction.md
+            - name: 開発
+              items:
+                - name: 単純なコマンドを使用してアプリケーションを作成する
+                  href: how-to-custom-commands-create-application-with-simple-commands.md
+                - name: コマンドにパラメーターを追加する
+                  href: how-to-custom-commands-add-parameters-to-commands.md
+                - name: コマンドのパラメーターに構成を追加する
+                  href: how-to-custom-commands-add-parameter-configuration.md
+                - name: 相互作用ルールを追加する
+                  href: how-to-custom-commands-add-interaction-rules.md
+                - name: 音声応答の言語生成テンプレートを追加する
+                  href: how-to-custom-commands-add-language-generation-templates.md
+            - name: 統合
+              items:
+                - name: Speech SDK を使用してクライアント アプリと統合する
+                  href: how-to-custom-commands-setup-speech-sdk.md
+                - name: クライアント アプリケーションへのアクティビティの送信
+                  href: how-to-custom-commands-send-activity-to-client.md
+                - name: Web エンドポイントを設定する
+                  href: how-to-custom-commands-setup-web-endpoints.md
+            - name: 配置
+              items:
+                - name: Azure DevOps による継続的配置
+                  href: how-to-custom-commands-deploy-cicd.md
+            - name: テスト
+              items:
+                - name: カスタム コマンド アプリをテストする
+                  href: how-to-custom-commands-developer-flow-test.md
+            - name: デバッグ
+              items:
+                - name: アプリの作成時にエラーをデバッグする
+                  href: how-to-custom-commands-debug-build-time.md
+                - name: アプリの実行時にエラーをデバッグする
+                  href: how-to-custom-commands-debug-runtime.md
+            - name: References
+              items:
+                - name: カスタム コマンドの概念
+                  href: custom-commands-references.md
+        - name: リソース
+          items:
+            - name: カスタム コマンドのサンプル (GitHub)
+              href: 'https://aka.ms/speech/cc-samples'
+            - name: 音声アシスタントのサンプル (GitHub)
+              href: 'http://aka.ms/speech/va-samples'
+            - name: 音声アシスタントの FAQ
+              href: faq-voice-assistants.md
+            - name: Speech SDK
+              href: speech-sdk.md
     - name: Direct Line Speech
       items:
         - name: Direct Line Speech とは
