--- a/articles/service-health/TOC.yml
+++ b/articles/service-health/TOC.yml
@@ -30,7 +30,9 @@
       href: service-health-alert-webhook-pagerduty.md
     - name: アラートを OpsGenie に送信する
       href: service-health-alert-webhook-opsgenie.md
-    - name: リソース正常性イベントのアラートの構成
+    - name: Azure portal を使用してリソースの正常性アラートを構成する
+      href: resource-health-alert-monitor-guide.md
+    - name: Resource Manager テンプレートを使用して Resource Health アラートを構成する
       href: resource-health-alert-arm-template-guide.md
 - name: リファレンス
   items:
