commit translated contents

--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -21,10 +21,10 @@
     - name: Azure CLI
       href: /cli/azure/account/management-group
     - name: Azure PowerShell
-      href: '/powershell/module/az.resources/#resources'
+      href: /powershell/module/az.resources/#resources
     - name: Azure SDK for .NET
       href: /dotnet/api/overview/azure/managementgroups
-    - name: Azure SDK For Node
+    - name: Azure SDK for JavaScript
       href: /javascript/api/@azure/arm-managementgroups/managementgroups
     - name: REST
       href: /rest/api/resources/managementgroups
