--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -177,7 +177,7 @@
           href: /java/api/com.microsoft.azure.management.resources.policyassignment?view=azure-java-stable
         - name: ポリシーの定義
           href: /java/api/com.microsoft.azure.management.resources.PolicyDefinitions?view=azure-java-stable
-    - name: Azure SDK For Node
+    - name: Azure SDK for JavaScript
       items:
         - name: ポリシー
           href: /javascript/api/@azure/arm-policy
